Sigil v0.1.3 <ADD DATE>
    - the "makedmg" target for Macs is not build by default anymore and needs to be
    invoked directly; this was done to speed rebuilds
    - Macs now have a standard multiple document interface: opening a new file opens it
    in a new window, not in the old one (issue #22)
    - fixed a bug with warning dialog not informing the user of unsaved changes
    if he tried to load from the recent files list

Sigil v0.1.2 2009.08.12.
    - added the ability to specify the main publication identifier directly,
    through the "CustomID" basic metadata property (issue #3)
    - fixed a bug with warning dialog not informing the user of unsaved changes
    when editing in code view (issue #30)
    - Sigil is now a universal Mac application (ppc and i386, in 32bit) (issue #5)
    - implemented a workaround for a bug in QTextCodec causing bad HTML codec detection (issue #74)
    - SVG elements are not removed anymore (issue #24)
    - inter-document HTML links are now fully supported (issue #53)
    - fixed rare issue where CSS style rules could get duplicated when changing views
    - fixed issue with inline style tags in OPS documents not being loaded (issue #58)
    - Sigil can now accept a file to load as the first command line argument; this also
    provides support for "Open With..." operating system features (issue #63)
    - fixed an issue where the reported build time in the About dialog was actually the execution
    time (issue #65)
    - loading of missing files in the recent files list is now improved (issue #57)
    - fixed a rare issue where the wrong view could be sent to the printer on print actions
    - Sigil now creates a guide element with a cover page in the OPF if the content of the first
    OPS document is less than 1000 characters long (issue #48)
    - support for importing UTF-16 encoded documents (not just UTF-8)
    - provided install target for linux; the binary is now also named "sigil"